Fix categories layout
- right scrollbar would not be visible
- elements sometimes overlapped header
- just a bit more responsive

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 .App > div {
   /* make single child (except nav) fullscreen */
   position: fixed;
-  top: 51px;
+  top: 52px;
   left: 0;
   right: 0;
   bottom: 0;
